<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewGesture"
    tools:showIn="@layout/activity_add_new_gesture">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewGesture_step1"
            android:textSize="@dimen/tvFontSize"
            android:layout_marginTop="@dimen/linear_margin_top"
            android:layout_marginStart="@dimen/linear_margin_left"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnChooseGesture"
            android:layout_marginStart="@dimen/linear_margin_left"
            android:text="@string/btnAddNewGesture"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNewGesture_step2"
            android:textSize="@dimen/tvFontSize"
            android:layout_marginTop="@dimen/linear_margin_top"
            android:layout_marginStart="@dimen/linear_margin_left"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etGestureNote"
            android:layout_marginLeft="@dimen/linear_margin_left"
            android:layout_marginRight="@dimen/linear_margin_left"
            android:hint="@string/whoseGesture"
            android:inputType="text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddGesture"
            android:layout_marginTop="@dimen/linear_margin_left"
            android:text="@string/btnAdd"/>

        <TextView
            android:id="@+id/small_img_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/small_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/clip_pic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/clip_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>